kubernetes/cassandra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: cassandra
  name: cassandra
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cassandra
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-petclinic-reactive-default: "true"
        io.kompose.service: cassandra
    spec:
      containers:
        - image: cassandra:3.11.8
          name: cassandra-server
          ports:
            - containerPort: 7000
            - containerPort: 9042
          resources: {}
      restartPolicy: Always
status: {}
