kubernetes/petclinic-frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: petclinic-frontend
  name: petclinic-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: petclinic-frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-petclinic-reactive-default: "true"
        io.kompose.service: petclinic-frontend
    spec:
      containers:
        - image: gcr.io/pl-pixies/users/ddelnano/petclinic-frontend:1.0
          name: petclinic-frontend
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
