kubernetes/grafana-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana-server
  name: grafana-server
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3000
  selector:
    io.kompose.service: grafana-server
status:
  loadBalancer: {}
