kubernetes/petclinic-backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: petclinic-backend
  name: petclinic-backend
spec:
  ports:
    - name: "9966"
      port: 9966
      targetPort: 9966
    - name: "9967"
      port: 9967
      targetPort: 9967
  selector:
    io.kompose.service: petclinic-backend
status:
  loadBalancer: {}
